[gd_scene load_steps=13 format=3 uid="uid://drxpu7l676047"]

[ext_resource type="PackedScene" path="res://Scenes/Character3D.tscn" id="1"]
[ext_resource type="Script" path="res://Scenes/Level3D.gd" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/TurnMarker.tscn" id="3"]
[ext_resource type="Theme" uid="uid://c840ow6okr33r" path="res://Themes/GUI_Default.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://c2dgjx3q1tpae" path="res://Scenes/GoodOrange.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/GoodIceCream.tscn" id="6"]
[ext_resource type="PackedScene" path="res://Scenes/GoodBlueberry.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://qdn304udsvig" path="res://Scenes/GoodBanana.tscn" id="13"]

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.329412, 0.384314, 0.505882, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.670588, 0.0588235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="10"]
Panel/styles/panel = SubResource("9")

[sub_resource type="Sky" id="2"]

[sub_resource type="Environment" id="1"]
background_mode = 2
sky = SubResource("2")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.7
glow_intensity = 4.34
glow_strength = 2.0
glow_bloom = 0.67
adjustment_saturation = 2.13

[node name="Level3D" type="Node3D"]
script = ExtResource("2")
board_size = Vector2(10, 10)
mouse_sensitivity = 0.2

[node name="CameraRig" type="Marker3D" parent="."]
transform = Transform3D(0.707107, -0.241845, 0.664463, 0, 0.939693, 0.34202, -0.707107, -0.241845, 0.664463, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
size = 10.0

[node name="You" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 1)
player = true

[node name="Tween" parent="You" index="1"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="SubViewport" parent="You" index="3"]
size = Vector2i(240, 240)

[node name="Dave" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 5)

[node name="Tween" parent="Dave" index="1"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="SubViewport" parent="Dave" index="3"]
size = Vector2i(240, 240)

[node name="Mike" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 8)

[node name="Tween" parent="Mike" index="1"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="SubViewport" parent="Mike" index="3"]
size = Vector2i(240, 240)

[node name="Character3D" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)

[node name="Character3D2" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 9)

[node name="Character3D3" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 9)

[node name="TurnMarker" parent="." instance=ExtResource("3")]

[node name="Panel" type="Panel" parent="."]
offset_right = 250.0
offset_bottom = 229.0
theme = SubResource("10")

[node name="GUI" type="HBoxContainer" parent="."]
offset_right = 249.0
offset_bottom = 228.0
mouse_filter = 2
theme = ExtResource("4")
alignment = 1

[node name="Right" type="VBoxContainer" parent="GUI"]
layout_mode = 2
offset_left = 36.0
offset_right = 212.0
offset_bottom = 228.0
size_flags_horizontal = 4
mouse_filter = 2

[node name="PlayerOptions" type="VBoxContainer" parent="GUI/Right"]
layout_mode = 2
offset_right = 176.0
offset_bottom = 177.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_right = 176.0
offset_bottom = 21.0
text = "It is Derp's turn"

[node name="Read" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_left = 69.0
offset_top = 25.0
offset_right = 107.0
offset_bottom = 47.0
size_flags_horizontal = 4
disabled = true
text = "Read"

[node name="Walk" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_left = 68.0
offset_top = 51.0
offset_right = 108.0
offset_bottom = 73.0
size_flags_horizontal = 4
text = "Move"

[node name="PickUp" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_left = 62.0
offset_top = 77.0
offset_right = 114.0
offset_bottom = 99.0
size_flags_horizontal = 4
disabled = true
text = "Pick Up"

[node name="Throw" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_left = 67.0
offset_top = 103.0
offset_right = 109.0
offset_bottom = 125.0
size_flags_horizontal = 4
text = "Throw"

[node name="Wait" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_left = 70.0
offset_top = 129.0
offset_right = 106.0
offset_bottom = 151.0
size_flags_horizontal = 4
text = "Wait"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
offset_top = 155.0
offset_right = 176.0
offset_bottom = 177.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions/HBoxContainer"]
visible = false
layout_mode = 2
offset_top = 8.0
offset_right = 149.0
offset_bottom = 27.0
size_flags_horizontal = 7
text = "Pause during all turns "

[node name="CheckButton" type="CheckButton" parent="GUI/Right/PlayerOptions/HBoxContainer"]
layout_mode = 2
offset_right = 176.0
offset_bottom = 22.0
size_flags_horizontal = 7
text = "Pause during all turns"

[node name="WalkOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
offset_right = 229.0
offset_bottom = 49.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/WalkOptions"]
layout_mode = 2
offset_left = 17.0
offset_right = 212.0
offset_bottom = 49.0
size_flags_horizontal = 4
text = "Choose your destination,
or click \"Cancel\""

[node name="PickUpOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
offset_right = 200.0

[node name="ThrowOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
offset_right = 229.0
offset_bottom = 49.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/ThrowOptions"]
layout_mode = 2
offset_left = 42.0
offset_right = 186.0
offset_bottom = 49.0
size_flags_horizontal = 4
text = "Click your target, 
or \"Cancel\""

[node name="WaitOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
offset_top = 142.0
offset_right = 298.0
offset_bottom = 184.0

[node name="Label" type="Label" parent="GUI/Right/WaitOptions"]
layout_mode = 2
offset_right = 298.0
offset_bottom = 14.0
text = "Wait how long?"

[node name="WaitDuration" type="SpinBox" parent="GUI/Right/WaitOptions"]
layout_mode = 2
offset_top = 18.0
offset_right = 298.0
offset_bottom = 42.0
min_value = 10.0
max_value = 300.0
step = 10.0
value = 100.0

[node name="ProceedCancel" type="HBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
offset_top = 226.0
offset_right = 229.0
offset_bottom = 253.0
alignment = 1

[node name="Proceed" type="Button" parent="GUI/Right/ProceedCancel"]
layout_mode = 2
offset_left = 37.0
offset_right = 112.0
offset_bottom = 27.0
text = "Proceed"

[node name="Cancel" type="Button" parent="GUI/Right/ProceedCancel"]
layout_mode = 2
offset_left = 116.0
offset_right = 191.0
offset_bottom = 27.0
text = "Cancel"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.824707, 0.300371, 0.479204, -0.534501, 0.690879, 0.486821, -0.184845, -0.657619, 0.730321, 8.30672, 3.51017, 9.72209)
visible = false
shadow_enabled = true

[node name="LevelFood" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0.1)

[node name="GoodBanana" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91693, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="GoodOrange" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.25, 1)

[node name="GoodOrange2" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.25, 1.99581)

[node name="GoodOrange3" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.82789, 0.25, 1.99581)

[node name="GoodOrange4" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.82789, 0.25, 1.03273)

[node name="GoodOrange5" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.71693, 0.25, 1.03273)

[node name="GoodOrange6" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89895, 0.25, 1.03273)

[node name="GoodOrange7" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89895, 0.25, 1.17774)

[node name="GoodOrange8" parent="LevelFood" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89895, 0.25, 0.784404)

[node name="LevelFood5" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, -0.1)

[node name="GoodBanana" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91693, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood5" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="GoodIceCream" parent="LevelFood5" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88459, 0.25, 2)

[node name="GoodIceCream2" parent="LevelFood5" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88459, 0.25, 1.70713)

[node name="GoodIceCream3" parent="LevelFood5" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88459, 0.25, 2.25781)

[node name="GoodIceCream4" parent="LevelFood5" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.71818, 0.25, 2)

[node name="GoodIceCream5" parent="LevelFood5" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0243, 0.25, 2)

[node name="LevelFood4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0.1)

[node name="GoodBanana" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91693, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood4" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="GoodBlueberry" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08964, 0.25, 8.68002)

[node name="GoodBlueberry2" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12088, 0.25, 8.68002)

[node name="GoodBlueberry3" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12088, 0.25, 7.9138)

[node name="GoodBlueberry4" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.067, 0.25, 7)

[node name="GoodBlueberry5" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.25, 6)

[node name="GoodBlueberry6" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.25, 5)

[node name="GoodBlueberry7" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.25, 4)

[node name="GoodBlueberry8" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.25, 3)

[node name="GoodBlueberry9" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.25, 2)

[node name="GoodBlueberry10" parent="LevelFood4" instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0.25, 1)

[node name="LevelFood3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, -0.1)

[node name="GoodBanana" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91693, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood3" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood2" type="Node3D" parent="."]

[node name="GoodBanana" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91693, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood2" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood6" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0.204)

[node name="GoodBanana" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.99361, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.017, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood6" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood7" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0.004)

[node name="GoodBanana" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.00698, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.017, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood7" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood8" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0.204)

[node name="GoodBanana" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0261, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood8" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood9" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.1, 0, 0.004)

[node name="GoodBanana" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88026, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood9" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[node name="LevelFood10" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, 0, 0.104)

[node name="GoodBanana" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.922452, 0.25, 5.935)

[node name="GoodBanana2" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.02611, 0.25, 3.04989)

[node name="GoodBanana3" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01222, 0.25, 5.96714)

[node name="GoodBanana4" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00894, 0.25, 4.0341)

[node name="GoodBanana5" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98967, 0.25, 4.0272)

[node name="GoodBanana6" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06529, 0.25, 2)

[node name="GoodBanana7" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95671, 0.25, 2)

[node name="GoodBanana8" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.07178)

[node name="GoodBanana9" parent="LevelFood10" instance=ExtResource("13")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948029, 0.25, 2)

[connection signal="pressed" from="GUI/Right/PlayerOptions/Walk" to="." method="_on_Walk_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/PickUp" to="." method="_on_PickUp_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Throw" to="." method="_on_Throw_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Wait" to="." method="_on_Wait_pressed"]
[connection signal="toggled" from="GUI/Right/PlayerOptions/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Proceed" to="." method="_on_Proceed_pressed"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Cancel" to="." method="_on_Cancel_pressed"]

[editable path="You"]
[editable path="Dave"]
[editable path="Mike"]
